  Data Services, www.flightdataservices.com).
- Support for customizing the point type through a callback when
  plotting points and new symbol plugin with some predefined point
  types (sponsored by Utility Data Corporation).
- Resize plugin for automatically redrawing when the placeholder
  changes size, e.g. on window resizes (sponsored by Novus Partners).
- Support Infinity/-Infinity for plotting asymptotes by hacking it
  into +/-Number.MAX_VALUE (reported by rabaea.mircea).
- Support for restricting navigate plugin to not pan/zoom an axis (based
  on patch by kkaefer).
- Support for providing the drag cursor for the navigate plugin as an
  option (based on patch by Kelly T. Moore).
- Options for controlling whether an axis is shown or not (suggestion
  by Timo Tuominen) and whether to reserve space for it even if it
  isn't shown.
- New attribute $.plot.version with the Flot version as a string.
- The version comment is now included in the minified jquery.flot.min.js.
- New options.grid.minBorderMargin for adjusting the minimum margin
  provided around the border (based on patch by corani, issue 188).
- Refactor replot behaviour so Flot tries to reuse the existing
  canvas, adding shutdown() methods to the plot (based on patch by
  Ryley Breiddal, issue 269). This prevents a memory leak in Chrome
  and hopefully makes replotting faster for those who are using $.plot
  instead of .setData()/.draw(). Also update jQuery to 1.5.1 to
  prevent IE leaks fixed in jQuery.

- New hooks: drawSeries, shutdown

Bug fixes:

- Fixed problem with findNearbyItem and bars on top of each other
  (reported by ragingchikn, issue 242).
- Fixed problem with ticks and the border (based on patch from
  ultimatehustler69, issue 236).
- Fixed problem with plugins adding options to the series objects.
- Fixed a problem introduced in 0.6 with specifying a gradient with {
  brightness: x, opacity: y }.
- Don't use $.browser.msie, check for getContext on the created canvas